<resources>
    <string name="app_name">Kelompok D</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="mapbox_access_token">pk.eyJ1Ijoicm9iZXQiLCJhIjoiY2tmcGRnODAyMDl5azJ2cDYxdGpuNDZndiJ9.Iamcc6dfMb1qBc-qiatdJQ</string>
    <string name="user_location_permission_explanation">Permission granted</string>
    <string name="user_location_permission_not_granted">Permission not granted</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ganti_pencarian">Ganti Pencarian</string>
    <string name="search_hint">Ketik nama pencarian</string>
    <string name="user_profil">User Profil</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="update_user_profil">Update User Profil</string>
    <string name="update_profil">Update Profil</string>
    <string name="Kembali">Kembali</string>

    <string-array name="dewasa_text">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="anak_text">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="kamar_text">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>